# src/main/java/org/jsprt/assignment/controller/TransactionsApi.java
@@ -1,7 +1,7 @@
 package org.jsprt.assignment.controller;
 
 import io.swagger.annotations.*;
-import org.jsprt.assignment.model.Transactions;
+import org.jsprt.assignment.model.Transaction;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -19,16 +19,16 @@ import java.util.List;
 @RestController
 public class TransactionsApi {
 
-    @ApiOperation(value = "Find all the transactions for an account", nickname = "getTransactions", notes = "Find all the transactions for an account", response = Transactions.class, responseContainer = "List", tags = {"transactions",})
+    @ApiOperation(value = "Find all the transactions for an account", nickname = "getTransactions", notes = "Find all the transactions for an account", response = Transaction.class, responseContainer = "List", tags = {"transactions",})
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "successful operation", response = Transactions.class, responseContainer = "List"),
+            @ApiResponse(code = 200, message = "successful operation", response = Transaction.class, responseContainer = "List"),
             @ApiResponse(code = 400, message = "Invalid Customer/Account ID supplied"),
             @ApiResponse(code = 404, message = "Customer/Account not found"),
             @ApiResponse(code = 405, message = "Customer/Account not active")})
     @RequestMapping(value = "/customers/{id}/accounts/{accountNumber}/transactions",
             produces = {"application/json"},
             method = RequestMethod.GET)
-    public ResponseEntity<List<Transactions>> getTransactions(@ApiParam(value = "Customer identifier number", required = true) @PathVariable("id") String id, @ApiParam(value = "Customer account number", required = true) @PathVariable("accountNumber") String accountNumber) {
+    public ResponseEntity<List<Transaction>> getTransactions(@ApiParam(value = "Customer identifier number", required = true) @PathVariable("id") String id, @ApiParam(value = "Customer account number", required = true) @PathVariable("accountNumber") String accountNumber) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
     }
 
