# src/main/java/org/jsprt/assignment/mapper/ToDto.java
@@ -1,6 +1,7 @@
 package org.jsprt.assignment.mapper;
 
 import org.jsprt.assignment.domain.entity.Account;
+import org.jsprt.assignment.domain.entity.Transaction;
 
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -16,5 +17,17 @@ public class ToDto {
         accountDto.setType(org.jsprt.assignment.model.Account.TypeEnum.fromValue(account.getType().name()));
         accountDto.setBalanceDate(new SimpleDateFormat("dd/MM/yyyy").format(new Date()));
         return accountDto;
+    }
+
+    public org.jsprt.assignment.model.Transaction convert(Transaction transactionDomain) {
+        final var transaction = new org.jsprt.assignment.model.Transaction();
+        transaction.setName(transactionDomain.getName());
+        transaction.setNumber(transactionDomain.getNumber());
+        transaction.setCreditAmount(transactionDomain.getCreditAmount());
+        transaction.setCurrency(transactionDomain.getCurrency());
+        transaction.setTransactionNarrative(transactionDomain.getNarrative());
+        transaction.setType(org.jsprt.assignment.model.Transaction.TypeEnum.fromValue(transactionDomain.getType().name()));
+        transaction.setValueDate(new SimpleDateFormat("MMM. dd,yyyy ").format(new Date()));
+        return transaction;
     }
 }
